--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,12 @@ targetCompatibility = 8
 
 
 repositories {
+     mavenCentral() // for transitive dependencies
+	 maven { url 'https://jitpack.io' }
+	 maven {
+      name 'm2-dv8tion'
+      url 'https://m2.dv8tion.net/releases'
+    }
      maven { url "http://jcenter.bintray.com" }
      maven { url "https://jitpack.io" }
      maven { url "https://gitlab.discordlist.org/api/v4/projects/26/packages/maven" }
@@ -22,8 +28,10 @@ repositories {
 
 dependencies {
     compile group: 'com.github.GroovyDevs', name: 'deezer-api-client', version:'32853ffd41'
-    compile group: 'com.github.GroovyDevs', name: 'Lavalink-Client', version:'master-3.0-g6fa112e-26'
-    compile group: 'org.discordlist', name: 'botlist-wrapper', version:'1.4-SNAPSHOT'
+	compile group: 'org.discordlist', name: 'botlist-wrapper', version: '1.5'
+	compile files('libs/jda.jar')
+	compile group: 'com.sedmelluq', name: 'lavaplayer', version: '1.3.47'
+	compile group: 'com.github.freyacodes', name: 'Lavalink-Client', version: '4.0'
     compile group: 'com.google.guava', name: 'guava', version:'27.0-jre'
     compile group: 'org.json', name: 'json', version:'20180813'
     compile group: 'org.jsoup', name: 'jsoup', version:'1.11.3'
